@@ -62,6 +62,8 @@ int main() {
     while (RGFW_window_shouldClose(win) == RGFW_FALSE) {
         while (RGFW_window_checkEvent(win)) {  // or RGFW_window_checkEvents(); if you only want callbacks
             // you can either check the current event yourself
+            if (win->event.type == RGFW_quit) break;
+            
             if (win->event.type == RGFW_mouseButtonPressed && win->event.button == RGFW_mouseLeft) {
                 printf("You clicked at x: %d, y: %d\n", win->event.point.x, win->event.point.y);
             }
